# MiniSQL

./: .gitignore  CMakeLists.txt  README.md
examples/: advanced_demo.sql
include/: minidb.hpp  sqlexpr.hpp
pgsql/: reference.sql
src/: database.cpp  main.cpp  minidb.cpp  sqlexpr.cpp  table.cpp
